# vaccel_google_test

./: .gitignore  make_tests.sh  run_code_coverage.sh
.github/workflows/: test.yml
examples/: minmax.c
src/: id_pool.h  plugin.c  plugin.h  resources.c  resources.h  vaccel.h
src/include/: vaccel.h
test/: CMakeLists.txt  test_fpga.cpp  test_id_pool.cpp  test_log.cpp  test_misc.cpp  test_plugin.cpp  test_resources.cpp  test_session.cpp  test_vaccel.cpp
